--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Bugfixes: that and this." ></textarea>
 
   <script src="./js/libs/jsonld/jsonld.min.js"></script>
   <script>
-    Promise.all(([loadSpdxData(), loadContextData()]).then(results => {
+    Promise.all([loadSpdxData(), loadContextData()]).then(results => {
       const [licenses, contexts] = results;
       SPDX_LICENSES = licenses;
       SPDX_LICENSE_IDS = licenses.map(license => license['licenseId']);
