--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ See top-level LICENSE file for more information
 </head>
 <body>
   <header>
-    <h1>CodeMeta generator v3.0</h1><!-- Generate codemeta v2.0 by default for now, allow v3.0 generation by clicking -->
+    <h1>CodeMeta generator v3.0</h1>
   </header>
 
   <main>
