Refactor codemeta validation code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ See top-level LICENSE file for more information
     <script src="./js/fields_data.js"></script>
     <script src="./js/dynamic_form.js"></script>
     <script src="./js/codemeta_generation.js"></script>
+    <script src="./js/validation/utils.js"></script>
     <script src="./js/validation/primitives.js"></script>
     <script src="./js/validation/things.js"></script>
     <script src="./js/validation/index.js"></script>
