gh-22 Add download button

--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@ Bugfixes: that and this." ></textarea>
             title="Checks the codemeta.json file below is valid, and displays errors." />
         <input type="button" id="importCodemeta" value="Import codemeta.json" disabled
             title="Fills the fields above based on the codemeta.json file below." />
+        <a id="downloadCodemeta"><input type="button" value="Download codemeta.json" disabled
+                  title="Download the codemeta.json file as displayed below." /></a>
     </form>
 
     <p id="errorMessage">
