Fix link to license list

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ See top-level LICENSE file for more information
                 <!-- This datalist is be filled automatically -->
 
                 <br />
-                <span class="field-description" id="licenses_descr">from <a href="https://spdx.org/license-list">SPDX licence list</a></span>
+                <span class="field-description" id="licenses_descr">from <a href="https://spdx.org/licenses/">SPDX licence list</a></span>
 
                 <div id="selected-licenses">
                     <!-- This div is to be filled as the user selects licenses -->
