--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ See top-level LICENSE file for more information
 
   <main>
 
-    <p>Most fields are optional. Mandatory fields will be highlighted when generating Codemeta.</p>
+    <p>Most fields are optional. Mandatory fields will be highlighted when generating CodeMeta.</p>
 
     <noscript>
         <p id="noscriptError">
-            This application requires Javascript to show dynamic fields in the form,
-            and generate a JSON file; but your browser does not support Javascript.
-            If you cannot use a browser with Javascript support, you can try
+            This application requires JavaScript to show dynamic fields in the form,
+            and generate a JSON file; but your browser does not support JavaScript.
+            If you cannot use a browser with JavaScript support, you can try
             <a href="https://codemeta.github.io/tools/">one of the other available tools</a>
             or write the codemeta.json file directly.
         </p>
