--- a/index.html
+++ b/index.html
@@ -50,27 +50,27 @@ See top-level LICENSE file for more information
                 <span class="field-description" id="name_descr">the software title</span>
             </p>
 
-            <p title="a brief description of the software">
+            <p title="A brief description of the software">
                 <label for="description">Description</label>
                 <textarea rows="4" cols="50"
                     name="description" id="description"
-                    placeholder="My Software computes ephemerides and orbit propagation. It has been developed from early ´80." ></textarea>
+                    placeholder="My software computes ephemerides and orbit propagation. It has been developed from early ´80." ></textarea>
             </p>
 
 
-            <p title="The date on which the software was created.">
+            <p title="The date on which the software was created">
                 <label for="dateCreated">Creation date</label>
                 <input type="text" name="dateCreated" id="dateCreated"
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
-            <p title="Date of first publication.">
+            <p title="Date of first publication">
                 <label for="datePublished">First release date</label>
                 <input type="text" name="datePublished" id="datePublished"
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
-            <p>
+            <p title="License(s) under which the software is published">
                 <label for="license">License(s)</label>
                 <input list="licenses" name="license" id="license"
                     aria-describedby="licenses_descr"> <!-- TODO: insert placeholder -->
@@ -154,19 +154,19 @@ See top-level LICENSE file for more information
         <fieldset id="fieldsetDevelopmentCommunity" class="leafFieldset">
             <legend>Development community / tools</legend>
 
-            <p title="Link to the repository where the un-compiled, human readable code and related code is located (SVN, Git, GitHub, CodePlex, institutional GitLab instance, etc.).">
+            <p title="Link to the repository where the un-compiled, human readable code and related code is located (SVN, Git, GitHub, CodePlex, institutional GitLab instance, etc.)">
                 <label for="codeRepository">Code repository</label>
                 <input type="URL" name="codeRepository" id="codeRepository"
                     placeholder="git+https://github.com/You/RepoName.git" />
             </p>
 
-            <p title="Link to continuous integration service (Travis-CI, Gitlab CI, etc.).">
+            <p title="Link to continuous integration service (Travis-CI, Gitlab CI, etc.)">
                 <label for="contIntegration">Continuous integration</label>
                 <input type="URL" name="contIntegration" id="contIntegration"
                     placeholder="https://travis-ci.org/You/RepoName" />
             </p>
 
-            <p title="Link to a place for users/developpers to report and manage bugs (JIRA, GitHub issues, etc.).">
+            <p title="Link to a place for users/developpers to report and manage bugs (JIRA, GitHub issues, etc.)">
                 <label for="issueTracker">Issue tracker</label>
                 <input type="URL" name="issueTracker" id="issueTracker"
                     placeholder="https://github.com/You/RepoName/issues" />
@@ -188,7 +188,7 @@ https://www.example.org"
         <fieldset id="fieldsetRuntime" class="leafFieldset">
             <legend>Run-time environment</legend>
 
-            <p title="Programming Languages, separated by commas">
+            <p title="Programming languages, separated by commas">
                 <label for="programmingLanguage">Programming language</label>
                 <input type="text" name="programmingLanguage" id="programmingLanguage"
                     placeholder="C#, Java, Python 3"
@@ -196,7 +196,7 @@ https://www.example.org"
                 <span class="field-description" id="programmingLanguage_descr">separated by commas (<code>,</code>)</span>
             </p>
 
-            <p title="Runtime Platforms, separated by commas">
+            <p title="Runtime platforms, separated by commas">
                 <label for="runtimePlatform">Runtime platform</label>
                 <input type="text" name="runtimePlatform" id="runtimePlatform"
                     placeholder=".NET, JVM"
@@ -204,7 +204,7 @@ https://www.example.org"
                 <span class="field-description" id="runtimePlatform_descr">separated by commas (<code>,</code>)</span>
             </p>
 
-            <p title="Operating Systems, separated by commas">
+            <p title="Operating systems, separated by commas">
                 <label for="operatingSystem">Operating system</label>
                 <input type="text" name="operatingSystem" id="operatingSystem"
                     placeholder="Android 1.6, Linux, Windows, macOS"
@@ -212,7 +212,7 @@ https://www.example.org"
                 <span class="field-description" id="operatingSystem_descr">separated by commas (<code>,</code>)</span>
             </p>
 
-            <p title="Required software to run/use this one.">
+            <p title="Required software to run/use this one">
                 <label for="softwareRequirements">Other software requirements</label>
                 <br />
                 <textarea rows="4" cols="50"
@@ -234,7 +234,7 @@ https://github.com/psf/requests"
                     placeholder="1.0.0" />
             </p>
 
-            <p title="The date on which the software was most recently modified.">
+            <p title="The date on which the software was most recently modified">
                 <label for="dateModified">Release date</label>
                 <input type="text" name="dateModified" id="dateModified"
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
@@ -286,7 +286,7 @@ Bugfixes: that and this." ></textarea>
         <fieldset id="fieldsetAdditionalInfo" class="leafFieldset">
             <legend>Additional information</legend>
 
-            <p title="Development Status">
+            <p title="Development status">
             <label for="developmentStatus">Development status</label>
                 <datalist id="developmentStatuses">
                         <option value="concept">
@@ -307,7 +307,7 @@ Bugfixes: that and this." ></textarea>
                 </span>
             </p>
 
-            <p title="Source Code of">
+            <p title="Source code of">
                 <label for="isSourceCodeOf">Is source code of</label>
                 <input type="text" name="isSourceCodeOf" id="isSourceCodeOf"
                     placeholder="Bigger Application" />
@@ -351,17 +351,17 @@ Bugfixes: that and this." ></textarea>
     </form>
     <form>
         <input type="button" id="generateCodemetaV3" value="Generate codemeta.json v3.0" disabled
-            title="Creates a codemeta.json v3.0 file below, from the information provided above." />
+            title="Creates a codemeta.json v3.0 file below, from the information provided above" />
         <input type="button" id="generateCodemetaV2" value="Generate codemeta.json v2.0" disabled
-            title="Creates a codemeta.json v2.0 file below, from the information provided above." />
+            title="Creates a codemeta.json v2.0 file below, from the information provided above" />
         <input type="button" id="resetForm" value="Reset form"
-            title="Erases all fields." />
+            title="Erases all fields above" />
         <input type="button" id="validateCodemeta" value="Validate codemeta.json" disabled
-            title="Checks the codemeta.json file below is valid, and displays errors." />
+            title="Checks the codemeta.json file below is valid, and displays errors" />
         <input type="button" id="importCodemeta" value="Import codemeta.json" disabled
-            title="Fills the fields above based on the codemeta.json file below." />
+            title="Fills the fields above based on the codemeta.json file below" />
         <a id="downloadCodemeta"><input type="button" value="Download codemeta.json" disabled
-                  title="Download the codemeta.json file as displayed below." /></a>
+            title="Download the codemeta.json file as displayed below" /></a>
     </form>
 
     <p id="errorMessage">
