--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ See top-level LICENSE file for more information
                 <!-- This datalist is be filled automatically -->
 
                 <br />
-                <span class="field-description" id="licenses_descr">from <a href="https://spdx.org/licenses/">SPDX License List</a>; double-click to select from the list, and press Enter for multiple licenses</span>
+                <span class="field-description" id="licenses_descr">from <a href="https://spdx.org/licenses/">SPDX License List</a>; click to select from the list, and press Enter for multiple licenses</span>
                 <div id="selected-licenses">
                     <!-- This div is to be filled as the user selects licenses -->
                 </div>
