Revert placeholder wrong casing fix
Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ See top-level LICENSE file for more information
                 <label for="description">Description</label>
                 <textarea rows="4" cols="50"
                     name="description" id="description"
-                    placeholder="My software computes ephemerides and orbit propagation. It has been developed from early ´80." ></textarea>
+                    placeholder="My Software computes ephemerides and orbit propagation. It has been developed from early ´80." ></textarea>
             </p>
 
 
