Use a language that is browser-neutral
Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ See top-level LICENSE file for more information
 
                 <datalist id="licenses">
                 </datalist>
-                <!-- This datalist is be filled automatically -->
+                <!-- This datalist is to be filled automatically -->
 
                 <br />
-                <span class="field-description" id="licenses_descr">from <a href="https://spdx.org/licenses/">SPDX License List</a>; click to select from the list, and press Enter for multiple licenses</span>
+                <span class="field-description" id="licenses_descr">from <a href="https://spdx.org/licenses/">SPDX License List</a>; select from the list, one by one</span>
                 <div id="selected-licenses">
                     <!-- This div is to be filled as the user selects licenses -->
                 </div>
