Add favicon and fix title casing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ See top-level LICENSE file for more information
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>CodeMeta generator</title>
+    <title>CodeMeta Generator</title>
     <script src="./js/utils.js"></script>
     <script src="./js/fields_data.js"></script>
     <script src="./js/dynamic_form.js"></script>
@@ -21,7 +21,7 @@ See top-level LICENSE file for more information
 </head>
 <body>
   <header>
-    <h1>CodeMeta generator v3.0</h1>
+    <h1>CodeMeta Generator v3.0</h1>
   </header>
 
   <main>
