--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ See top-level LICENSE file for more information
                     placeholder="https://travis-ci.org/You/RepoName" />
             </p>
 
-            <p title="Link to a place for users/developpers to report and manage bugs (JIRA, GitHub issues, etc.)">
+            <p title="Link to a place for users/developers to report and manage bugs (JIRA, GitHub issues, etc.)">
                 <label for="issueTracker">Issue tracker</label>
                 <input type="URL" name="issueTracker" id="issueTracker"
                     placeholder="https://github.com/You/RepoName/issues" />
