--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ See top-level LICENSE file for more information
 
                 <br />
                 <span class="field-description" id="identifier_descr">
-                    such as ISBNs, GTIN codes, UUIDs, etc. see <a href="https://schema.org/identifier">schema.org/identifier</a>
+                    such as ISBNs, GTIN codes, UUIDs, etc. see <a href="https://schema.org/identifier">https://schema.org/identifier</a>
                 </span>
             </p>
             <!-- TODO:define better
