Change placeholder to "LGPL-3.0-or-later"
Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ See top-level LICENSE file for more information
                 <label for="license">License(s)</label>
                 <input list="licenses" name="license" id="license"
                     aria-describedby="licenses_descr"
-                    placeholder="BSD-2-Clause" >
+                    placeholder="LGPL-3.0-or-later" >
 
                 <datalist id="licenses">
                 </datalist>
