AGPL-3.0-only -> AGPL-3.0-or-later
Update license. Use source code headers as authoritative source.
Per https://github.com/codemeta/codemeta-generator/issues/79#issuecomment-3384934458

Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ See top-level LICENSE file for more information
             "name": "Software Heritage",
             "url": "https://www.softwareheritage.org/"
         },
-        "license": "https://spdx.org/licenses/AGPL-3.0-only",
+        "license": "https://spdx.org/licenses/AGPL-3.0-or-later",
         "dateCreated": "2019-10-02",
         "softwareVersion": "3.0"
     }
