Directly swap DOM in movePerson
Also trying to do getElementById when possible, instead of querySelector(#id)

Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>

--- a/index.html
+++ b/index.html
@@ -372,6 +372,8 @@ Bugfixes: that and this." ></textarea>
                     <input type="button" id="author_remove" value="Remove last"
                         onclick="removePerson('author');" />
                 </div>
+                <!-- author_list div is to be filled as the user adds authors -->
+                <div id="author_list"></div>
             </fieldset>
 
             <fieldset class="persons" id="contributor_container">
@@ -386,6 +388,8 @@ Bugfixes: that and this." ></textarea>
                     <input type="button" id="contributor_remove" value="Remove last"
                         onclick="removePerson('contributor');" />
                 </div>
+                <!-- contributor_list div is to be filled as the user adds contributors -->
+                <div id="contributor_list"></div>
             </fieldset>
         </div>
 
